# holmes

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  agentic_hpo_overview.md  pyproject.toml  taplo.toml
.github/workflows/: claude-code-review.yml  claude.yml
deploy/: README.md  cloud-init.yaml  provision.py  provision.sh
existing_literature/AgentHPO - Large Language Model Agent for Hyper-Parameter Optimization/: cpal_2025.bbl  cpal_2025.sty  cpal_2025.tex  reference.bib
existing_literature/DeepCAVE - A Visualization and Analysis Tool for Automated Machine Learning/: 00README.json  additional.bib  lib.bib  macros.tex  main.tex  proc.bib
existing_literature/HyperSHAP - Shapley Values and Interactions for Explaining Hyperparameter Optimization/: 00README.json  aaai2026.bib  aaai2026.tex  project_commands.tex  settings.tex
existing_literature/MetaLLMix - An XAI Aided LLM-Meta-learning Based Approach for Hyper-parameters Optimization/: main.bbl  main.bib  main.tex
existing_literature/piBO - Augmenting Acquisition Functions with User Beliefs for Bayesian Optimization/: appendix.tex  iclr2022_conference.sty  paper.bbl  paper.tex  proof.tex  proofsketch.tex  shortcuts_ln.sty  throwaway.tex
existing_literature/piBO - Augmenting Acquisition Functions with User Beliefs for Bayesian Optimization/bibliography/: lib.bib  local.bib  proc.bib  strings.bib
existing_literature/piBO - Augmenting Acquisition Functions with User Beliefs for Bayesian Optimization/includes/: packages.tex
holmes/: __init__.py  cli.py  config.py  dispatch.py  fleet.py
holmes/als/: __init__.py  model.py
holmes/data/: __init__.py  dataset.py  preprocess.py
holmes/metrics/: __init__.py  diagnostics.py
holmes/search/: __init__.py  bayes.py  grid.py  harness.py  heuristics.py  holmes.py  random_search.py  rule_engine.py
skill/: SKILL.md
skill/references/: REASONING_GUIDE.md  TRAJECTORY_SCHEMA.md
src/agentic_hpo_in_the_loop/: __init__.py
tests/: conftest.py  test_als.py  test_cli.py  test_config.py  test_dataset.py  test_diagnostics.py  test_dispatch.py  test_fleet.py  test_harness.py  test_heuristics.py  test_main.py  test_preprocess.py  test_search.py  test_skill_docs.py
