[project]
authors = [
    { name = "Murray Vanwyk", email = "murray@datasimply.co" },
    { name = "Vasilis Papastefanopoulos", email = "vas@datasimply.co" },
]
dependencies = [
    "huggingface-hub>=1.17.0",
    "implicit>=0.7.3",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.3",
]
description = "HOLMES: Hypothesis-driven Optimization via LLM-guided Model Exploration and Search"
name = "agentic-hpo-in-the-loop"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
holmes = "holmes.cli:main"

[build-system]
build-backend = "uv_build"
requires      = [ "uv_build>=0.11.8,<0.12.0" ]

[tool.uv.build-backend]
module-name = "holmes"
module-root = ""

[dependency-groups]
dev = [ "pre-commit>=4.6.0", "pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.6.0" ]

[tool.ruff]
line-length    = 120
show-fixes     = true
src            = [ "holmes", "tests" ]
target-version = "py311"

[tool.ruff.lint]
ignore = [ "COM812", "D203", "D213", "EM101", "ISC001", "PD010", "PT011", "PTH123", "SLF001", "TRY003" ]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "D1",
    "D2",
    "D3",
    "D4",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py"               = [ "D104", "F401", "F403", "F405" ]
"holmes/cli.py"             = [ "T201" ]                                                   # CLI prints to stdout by design
"holmes/dispatch.py"        = [ "T201" ]                                                   # planner prints the plan to stdout
"holmes/data/preprocess.py" = [ "T201" ]                                                   # progress reporting to stdout
"holmes/fleet.py"           = [ "S404", "S603", "S607", "T201" ]                           # fleet lifecycle: shells out to hcloud/ssh/rsync, prints
"holmes/search/*"           = [ "T201" ]                                                   # search progress to stdout
"tests/*"                   = [ "ANN", "ARG", "D", "INP001", "PLR2004", "S101", "SLF001" ]

[tool.ruff.lint.pylint]
max-args       = 15
max-branches   = 20
max-returns    = 10
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = [ "holmes" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venv     = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts   = "--cov=holmes"
testpaths = [ "tests" ]

[tool.coverage.run]
source = [ "holmes" ]
